--- a/.github/workflows/update_BanAD.yaml
+++ b/.github/workflows/update_BanAD.yaml
@@ -41,4 +41,6 @@ jobs:
             adblock.yaml
           signoff: true
         env:
+          LOG_LEVEL: debug
+          LOG_FORMAT: json
           GITHUB_TOKEN: ${{ secrets.COMMON_TOKEN }}
