--- a/.github/workflows/update_BanAD_List.yaml
+++ b/.github/workflows/update_BanAD_List.yaml
@@ -35,3 +35,5 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic update
+        env:
+          GITHUB_TOKEN: ${{ secrets.COMMON_TOKEN }}
