--- a/.github/workflows/update_BanAD.yaml
+++ b/.github/workflows/update_BanAD.yaml
@@ -32,13 +32,13 @@ jobs:
           rm adguard.yaml adaway.yaml ABPindo.yaml
           
       - name: Create commit
-        uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v9.1.3
         with:
           author_name: Reid_Vin
           author_email: reid_vin@outlook.com
           message: Automatic adblock list update
+          cwd: '.'
           add: |
             adblock.yaml
-          signoff: true
         env:
           GITHUB_TOKEN: ${{ secrets.COMMON_TOKEN }}
