--- a/.github/workflows/update_BanAD.yaml
+++ b/.github/workflows/update_BanAD.yaml
@@ -1,8 +1,8 @@
 name: Update adblock list
 
 on:
-  # schedule:
-  #   - cron: "0 6 * * *"
+#   schedule:
+#     - cron: "0 6 * * *"
   workflow_dispatch:
 
 jobs:
@@ -14,23 +14,29 @@ jobs:
         run: |
           echo "Downloading Adguard DNS block list..."
           curl -s https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt -o filter.txt
-          grep -o -P '(?<=^\|\|).*(?=\^$)' filter.txt | grep -v '\*' | sed 's/^/DOMAIN-SUFFIX,/' > adguard.yaml
+          grep -o -P '(?<=^\|\|).*(?=\^$)' filter.txt | grep -v '\*' | sed 's/^/DOMAIN-SUFFIX,/' | sed 's/^\(.*\),$/\1/' > adguard.yaml
           rm filter.txt
-
+          
           echo "Downloading AdAway block list..."
           curl -s 'https://adaway.org/hosts.txt' -o adaway.txt
-          sed -n '/^[0-9]/ s/^/DOMAIN-SUFFIX,/' adaway.txt | sed 's/^[^[:space:]]*[[:space:]]//' > adaway.yaml
+          sed -n '/^[0-9]/ s/^[^[:blank:]]\+[[:blank:]]\+\([^\#]\+\).*$/DOMAIN-SUFFIX,\1/p' adaway.txt > adaway.yaml
           rm adaway.txt
-
+          
           echo "Downloading ABPindo block list..."
           curl -s 'https://raw.githubusercontent.com/ABPindo/indonesianadblockrules/master/subscriptions/domain.txt' -o ABPindo.txt
-          sed 's/\./\.\*/g' ABPindo.txt | sed -n '/^||/ s/^||\([^|]*\)\^$/DOMAIN-SUFFIX,\1/p' > ABPindo.yaml
+          sed 's/^/DOMAIN-SUFFIX,/' ABPindo.txt > ABPindo.yaml
           rm ABPindo.txt
-
+          
           echo "Merging adblock lists into one file..."
-          cat adguard.yaml adaway.yaml ABPindo.yaml | sort -u > adblock.yaml
+          cat adguard.yaml adaway.yaml ABPindo.yaml > adblock.txt
           rm adguard.yaml adaway.yaml ABPindo.yaml
-
+          
+          echo "Adding header to adblock list..."
+          today=$(date '+%Y-%m-%d %H:%M:%S')
+          printf "# 广告列表 adblock rules\n# 内容：EasyPrivacy列表，隐私保护，屏蔽隐私追踪\n# 来源：https://easylist-downloads.adblockplus.org/easyprivacy.txt\n# 更新：%s\n# 数量：%s条\n# 作者：Reid_Vin_Action\n\n" "$today" "$(wc -l < adblock.txt)" > adblock.list
+          cat adblock.txt >> adblock.list
+          rm adblock.txt
+          
       - name: Create commit
         uses: EndBug/add-and-commit@v9.1.3
         with:
@@ -39,6 +45,6 @@ jobs:
           message: Automatic adblock list update
           cwd: '.'
           add: |
-            adblock.yaml
+            adblock.list
         env:
           GITHUB_TOKEN: ${{ secrets.COMMON_TOKEN }}
