--- a/Customizable-PrivateProxy.yaml
+++ b/Customizable-PrivateProxy.yaml
@@ -1,5 +1,10 @@
 payload:
   # > Scholar 用于自定义一些常用的走代理的网站
   - DOMAIN-SUFFIX,link.zhihu.com
+  - DOMAIN-KEYWORD,syno
+  - DOMAIN-KEYWORD,spk
+  - DOMAIN-KEYWORD,github
+  - DOMAIN-KEYWORD,imnks
+  - DOMAIN-KEYWORD,sentry
 
   
