--- a/Customizable-PrivateProxy.yaml
+++ b/Customizable-PrivateProxy.yaml
@@ -9,3 +9,4 @@ payload:
   - DOMAIN-KEYWORD,cn.bing
   - DOMAIN-KEYWORD,voice.google.com
   - DOMAIN-KEYWORD,voice-google
+  - DOMAIN-KEYWORD,voice.client
