--- a/Customizable-PrivateProxy.yaml
+++ b/Customizable-PrivateProxy.yaml
@@ -10,4 +10,4 @@ payload:
   - DOMAIN-KEYWORD,voice.google.com
   - DOMAIN-KEYWORD,voice-google
   - DOMAIN-KEYWORD,voice.client
-  - DOMAIN-KEYWORD,voice.client
+  - DOMAIN-KEYWORD,google
