--- a/Customizable-Direct.yaml
+++ b/Customizable-Direct.yaml
@@ -1,6 +1,6 @@
 payload:
   # > Scholar 用于直连的网址
-  - DOMAIN-SUFFIX,myprivatevideo.store
+  # > - DOMAIN-SUFFIX,myprivatevideo.store
   - DOMAIN-SUFFIX,qq.com
   - DOMAIN-SUFFIX,anticheatexpert.com
   - DOMAIN-SUFFIX,gloudsdk.com
