--- a/Customizable-OtherPrivate.yaml
+++ b/Customizable-OtherPrivate.yaml
@@ -1,4 +1,5 @@
 payload:
   # > Scholar 用于非私人节点的网址
   - DOMAIN-SUFFIX,acmcwdwodjwejsa.com
+  - DOMAIN-SUFFIX,myprivatevideo.store
   - IP-CIDR,103.195.103.66/32
