--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -79,7 +79,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
-custom_proxy_group=🔗 IPV6节点`url-test`(IPV6|ipv6|Ipv6)`http://www.gstatic.com/generate_204`300,,50`[]DIRECT
+custom_proxy_group=🔗 IPV6节点`url-test`[]DIRECT`(IPV6|ipv6|Ipv6)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=CG ChatGPT支持`url-test`(Chat|ChatGPT|Chatgpt|CHATGPT|GPT|gpt|Gpt|ChatGpt)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
