--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -11,7 +11,7 @@
 
 ;设置规则标志位
 ruleset=🤖 ChatBot,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/master/Clash/ChatBot.list
-ruleset=🔗 IPV6节点,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Customizable-IPV6-Proxy.list
+ruleset=🔍 IPV6选择,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Customizable-IPV6-Proxy.list
 ruleset=📶 网络测速,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/master/Clash/SpeedTest.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/master/Clash/UnBan.list
