--- a/Customizable-PrivateProxy.yaml
+++ b/Customizable-PrivateProxy.yaml
@@ -1,6 +1,6 @@
 payload:
   # > Scholar 用于自定义一些常用的走代理的网站
-  - DOMAIN-SUFFIX,link.zhihu.com
+  # - DOMAIN-SUFFIX,link.zhihu.com
   - DOMAIN-KEYWORD,syno
   - DOMAIN-KEYWORD,spk
   # - DOMAIN-KEYWORD,github
