--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -62,7 +62,7 @@ custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/gene
 custom_proxy_group=🚀 手动切换`select`[]🎯 全球直连`.*
 custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`CG ChatGPT支持`[]🎯 全球直连`.*
 custom_proxy_group=🔍 IPV6选择`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
-custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
+custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连
 custom_proxy_group=🔝 指定直连网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
 custom_proxy_group=📌 特别指定网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
 custom_proxy_group=📶 网络测速`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]DIRECT`.*
