--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -60,7 +60,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`[]🎯 全球直连`.*
-custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`CG ChatGPT支持`[]🎯 全球直连`.*
+custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]💡 ChatGPT支持
 custom_proxy_group=🔍 IPV6选择`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
 custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连
 custom_proxy_group=🔝 指定直连网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
@@ -87,7 +87,7 @@ custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
 custom_proxy_group=🔒 私人节点`url-test`(Reid_Vin|Rei_Vin|Reid-Vin|ReidVin|XiaoChen)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔗 IPV6节点`url-test`(IPV6|ipv6|Ipv6)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=CG ChatGPT支持`url-test`(Chat|ChatGPT|Chatgpt|CHATGPT|GPT|gpt|Gpt|ChatGpt)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💡 ChatGPT支持`url-test`(Chat|ChatGPT|Chatgpt|CHATGPT|GPT|gpt|Gpt|ChatGpt)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
