--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -60,11 +60,11 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`[]🎯 全球直连`.*
-custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]💡 ChatGPT支持
-custom_proxy_group=🔍 IPV6选择`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
-custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连
-custom_proxy_group=🔝 指定直连网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
-custom_proxy_group=📌 特别指定网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连
+custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]💡 ChatGPT支持`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
+custom_proxy_group=🔍 IPV6选择`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
+custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
+custom_proxy_group=🔝 指定直连网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
+custom_proxy_group=📌 特别指定网址`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
 custom_proxy_group=📶 网络测速`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]DIRECT`.*
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点`[]🎯 全球直连
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点`[]🎯 全球直连
