--- a/Clash/config/Reid_Vin_WithADBlock.ini
+++ b/Clash/config/Reid_Vin_WithADBlock.ini
@@ -16,6 +16,7 @@ ruleset=📶 网络测速,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/mas
 ruleset=🌐 GoogleVoice,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Customizable-PrivateProxy.list
 ruleset=🔝 指定直连网址,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Customizable-Direct.list
 ruleset=📌 特别指定网址,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Customizable-OtherPrivate.list
+ruleset=☎️ 国外DNS,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/foreign-dns.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -61,6 +62,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`[]🎯 全球直连`.*
+custom_proxy_group=☎️ 国外DNS`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
 custom_proxy_group=🤖 ChatBot`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔒 私人节点`[]💡 ChatGPT支持`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
 custom_proxy_group=🔍 IPV6选择`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🔗 IPV6节点`[]🔒 私人节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
 custom_proxy_group=🌐 GoogleVoice`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🔒 私人节点`[]🔗 IPV6节点`[]🎯 全球直连`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]EL 其他国家节点
