--- a/Clash/config/OptimizedVersion.ini
+++ b/Clash/config/OptimizedVersion.ini
@@ -4,6 +4,7 @@
 
 ;规则集
 ruleset=📞 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🤓 我的服务,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Clash/Customizable-Direct.list
 ruleset=☎️ 国外-DNS,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/foreignDNS.list
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/AI-Bot.list
 ruleset=📶 网络测速,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/SpeedTest-Web.list
@@ -29,6 +30,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;代理策略组-重要-排序直接影响分流效果
 ;小范围匹配 -> 大范围匹配
 custom_proxy_group=☑️ 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]🎥 奈飞节点`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3`[]✨ 指定节点4`[]✨ 指定节点5
+custom_proxy_group=🤓 私人服务`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]🎥 奈飞节点`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3`[]✨ 指定节点4`[]✨ 指定节点5
 custom_proxy_group=☎️ 国外-DNS`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]🎥 奈飞节点`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3`[]✨ 指定节点4`[]✨ 指定节点5
 custom_proxy_group=🤖 人工智能`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]🎥 奈飞节点`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3`[]✨ 指定节点4`[]✨ 指定节点5
 custom_proxy_group=📶 网络测速`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]🎥 奈飞节点`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3`[]✨ 指定节点4`[]✨ 指定节点5
