--- a/Clash/config/OptimizedVersion.ini
+++ b/Clash/config/OptimizedVersion.ini
@@ -4,7 +4,7 @@
 
 ;规则集
 ruleset=📞 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🤓 我的服务,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Clash/Customizable-Direct.list
+ruleset=🤓 私人服务,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Clash/Customizable-Direct.list
 ruleset=☎️ 国外-DNS,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/foreignDNS.list
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/AI-Bot.list
 ruleset=📶 网络测速,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/SpeedTest-Web.list
