--- a/Clash/config/OptimizedVersion.ini
+++ b/Clash/config/OptimizedVersion.ini
@@ -72,7 +72,7 @@ custom_proxy_group=💡 GPT节点`url-test`(Chat|ChatGPT|Chatgpt|CHATGPT|GPT|gpt
 custom_proxy_group=🔗 IPV6节点`url-test`(IPV6|ipv6|Ipv6|v6|V6)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔃 中转节点`url-test`(中转)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✈️ 优化节点`url-test`(优化|优)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💎 专线节点`url-test`(专线|专)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💎 专线节点`url-test`(专线|专|iepl|IEPL|IPLC|iplc)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=😡 歇斯底里`url-test`(Hysteria|hysteria|hy2|Hy2|hysteria|Hysteria2|hy|Hy)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🗑️ 垃圾节点`url-test`(官网|订阅|刷新|机场|剩余|.com|邀请|最新)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞选择`select`[]🔒 私人节点`(NF|奈飞|解锁|Netflix|NETFLIX|Media|流媒体|媒体)
