--- a/.github/workflows/updateDijiaNode.yaml
+++ b/.github/workflows/updateDijiaNode.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Download subscription file
       run: |
         echo "Fetching subscription from the API..."
-        curl -s -o Clash/config/dijia-node.list "https://sub1.114514000000.xyz/api/v1/client/subscribe?token=b1a14d4f"
+        curl -s -o Clash/config/dijia-node.list "https://sub1.114514000000.xyz/api/v1/client/subscribe?token=b1a14d4ff295e82750eaf0ebe9f70ae2"
     
     - name: Commit and push new subscription file
       run: |
