--- a/Clash/config/Reid_Vin_Back.ini
+++ b/Clash/config/Reid_Vin_Back.ini
@@ -3,7 +3,7 @@
 
 
 ;规则集
-ruleset=📞 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🏠 局域服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🤓 私人服务,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Clash/Customizable-Direct.list
 ruleset=☎️ 国外-DNS,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/foreignDNS.list
 ruleset=🤖 其他智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
@@ -88,6 +88,7 @@ custom_proxy_group=🎥 奈飞自动`url-test`(NF|奈飞|解锁|Netflix|NETFLIX|
 custom_proxy_group=✨ 指定节点1`select`.*
 custom_proxy_group=✨ 指定节点2`select`.*
 custom_proxy_group=✨ 指定节点3`select`.*
+custom_proxy_group=🏠 局域服务`select`[]DIRECT
 custom_proxy_group=🎯 不走代理`select`[]DIRECT
 custom_proxy_group=❌ 拒绝请求`select`[]REJECT
 
