--- a/Clash/config/Reid_Vin-LowMemory.ini
+++ b/Clash/config/Reid_Vin-LowMemory.ini
@@ -31,7 +31,7 @@ ruleset=📞 国内IP段,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=📞 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=📞 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=📞 国内服务,[]GEOIP,LAN
-ruleset=📞 国内服务,[]GEOIP,CN
+;ruleset=📞 国内服务,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
