--- a/Clash/config/Reid_Vin_With_ADB.ini
+++ b/Clash/config/Reid_Vin_With_ADB.ini
@@ -29,6 +29,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_C
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/Microsoft_CDN.list
 ruleset=🪙 加密货币,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Crypto/Crypto.list
 ruleset=🆎 广告拦截,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/Adblock.list
+ruleset=🧱 防火长城,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/refs/heads/main/custom-proxy.list
 ruleset=🧱 防火长城,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/refs/heads/main/Clash/Ruleset/GFW-Ultimate.list
 ruleset=📞 国内IP段,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/refs/heads/main/Clash/Ruleset/ChinaMax-IP.list
 ruleset=📞 国内服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/refs/heads/main/Clash/Ruleset/China-Domain.list
