Add new ruleset for 防火长城

--- a/Clash/config/Reid_Vin-LowMemory.ini
+++ b/Clash/config/Reid_Vin-LowMemory.ini
@@ -28,6 +28,7 @@ ruleset=🕊️ 推特代理,https://raw.githubusercontent.com/blackmatrix7/ios_
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/iOS_CDN.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/Microsoft_CDN.list
 ruleset=🪙 加密货币,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Crypto/Crypto.list
+ruleset=🧱 防火长城,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/refs/heads/main/custom-proxy.list
 ruleset=🧱 防火长城,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/refs/heads/main/Clash/Ruleset/GFW-Ultimate.list
 ruleset=📞 国内IP段,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=📞 国内IP段,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
