--- a/Clash/config/Reid_Vin.ini
+++ b/Clash/config/Reid_Vin.ini
@@ -75,7 +75,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`60,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`60,,50
 ;私人节点可设置为自建节点，只需要自建节点名称中设置特殊标记即可，可将（）内容改为自建节点特有的标记名称
-custom_proxy_group=🔒 私人节点`url-test`(Reid_Vin|Rei_Vin|Reid-Vin|ReidVin|XiaoChen)`http://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=🔒 私人节点`url-test`(Reid_Vin|Rei_Vin|Reid-Vin|ReidVin|XiaoChen|Reid|Vin|reid|vin)`http://www.gstatic.com/generate_204`60,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`60,,50
 custom_proxy_group=🇹🇼 台湾节点`url-test`(台|新北|彰化|TW|Taiwan|湾)`http://www.gstatic.com/generate_204`60,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`60,,50
